fixed other safari alignment issue with justify content center

--- a/CSS/contactme.css
+++ b/CSS/contactme.css
@@ -3,7 +3,7 @@
     margin: 40px auto 0 auto;
     display: flex;
     flex-flow: row;
-    
+    justify-content: center;
 }
 
 #message div {
@@ -48,7 +48,6 @@
 }
 
 .socialmediaitemscontainer {
-    /*width: 100%;*/
     margin: 10px auto 0 auto;
     display: flex;
     flex-flow: row;
